fix(sandbox): harden D-form harness against Codex CR findings (Phase 1.5)
- Strict JSON parser: reject leading zero, naked dot, empty exponent,
  Infinity/NaN literals, exponent overflow, unescaped control chars,
  bareword keys, max depth, trailing data
- Serializer cycle/depth/node-count guards via IdentityHashMap /
  id-set; reject non-finite floats in toJson
- Block System.exit AND Runtime.halt via SecurityManager
  (checkExit + checkPermission('exitVM.*'))
- Deterministic method dispatch: hint OR single public method;
  reject overloads, shadowing, missing
- Per-case jsonable try/catch so cyclic / NaN results surface as
  Runtime Error instead of harness panic
- Mirror all of the above in Python harness (os._exit / sys.exit
  blocked, type_override honored, allow_nan=False, SystemExit -> RE)
- 23 new Java + 11 new Python adversarial tests covering each fix
- Add -Djava.security.manager=allow to test ProcessBuilder so
  SecurityManager installs on JDK 18+ (the harness image pins
  JDK 17 where it is a no-op)

Java 68/68 + Python 18/18 green.